Fix modal videos not visible (blurhash z-index)

--- a/app/styles/components/media-gallery.scss
+++ b/app/styles/components/media-gallery.scss
@@ -68,17 +68,10 @@
 }
 
 .media-gallery__preview {
-  @apply bg-gray-200 dark:bg-gray-900 rounded-lg;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 0;
+  @apply w-full h-full absolute inset-0 object-cover bg-gray-200 dark:bg-gray-900 rounded-lg -z-10;
 
   &--hidden {
-    display: none;
+    @apply hidden;
   }
 }
 
